# code1

p4/FANI/: LICENSE  README.md  config.yml  convert.py  convert_to_tflite.sh  generate_output.py  nohup.out  prune_cluster.sh  requirement  run.py  test.sh  train.sh  valid.sh
p4/FANI/FANI_pd/: fingerprint.pb  keras_metadata.pb  saved_model.pb
p4/FANI/dataset/: dataset_builder.py  reds.py
p4/FANI/learner/: learner.py  metric.py
p4/FS-ADAPT/: README.md  datasets.py  main.py  networks.py
p4/SMPD_mindspore/: README.md
p4/Videoseg/: SLM_SA.py  VideoFramework.py
p4/campal-mindspore/: README.md  main.py  method.md  mindspore.sh
p4/catch-mindspore/: README.md
p4/dugMatting-mindspore/: ITMODNet_evaluater.py  README.md  requirements.txt  train.py
p4/fetch-mindspore/: README.md
p4/jat-mindspore/: README.md  run.py  run_infer_main.py
p4/loadpart-m/: build.sh  rename.sh
p4/loadpart-m/mindspore/ccsrc/offloading/: CMakeLists.txt  README.md  batch_offloading_server.cc  batch_offloading_server.h  cost_graph.cc  cost_graph.h  grpc_async_server.h  offloading_client.cc  offloading_client.h  offloading_client_py.cc  offloading_client_py.h  offloading_server_py.cc  offloading_server_py.h  offloading_service.proto  payload.cc  payload.h  quant.cc  quant.h  scheduler.cc  scheduler.h  stage_executor.cc  stage_executor.h  status.h  task_queue.cc  task_queue.h  utils.cc  utils.h
p4/mindspore_code/: Measure.py  common.py  getdata.py  main.py  my_test.py  test_opt.py  trainer.py  utility.py
p4/online-recommendation/: data.py  main.py  model.py  readme.md  requirements.txt
(+485 files in other folders)
